[gd_scene load_steps=4 format=3 uid="uid://by26rqc748mn"]

[ext_resource type="Script" path="res://scripts/match.gd" id="1_56wth"]
[ext_resource type="Texture2D" uid="uid://categg8ccq3xn" path="res://assets/Sprites/tiles/match.png" id="2_gy66s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4gbl"]
size = Vector2(25.4545, 1.81818)

[node name="Match" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_56wth")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gy66s")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_a4gbl")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
